--- a/app/templates/article/follower.html
+++ b/app/templates/article/follower.html
@@ -21,14 +21,15 @@
     <script src="{% static 'admin-lte/dist/js/demo.js' %}"></script>
     <script src="{% static 'js/content.js' %}"></script>
     <script>
-    $(function(){
+$(function(){
+          // httpメソッドがリソースの読み出し->true リソースの編集->false
           var csrftoken = $('input[name="csrfmiddlewaretoken"]').val();
           // 
           function csrfSafeMethod(method) {
-              // these HTTP methods do not require CSRF protection
+              // 下記HTTPメソッドはリソース変更しないため、CSRFTokenをヘッダに埋め込まない
               return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
           }
-          // ajax通信の前にDBを更新するメソッドであればCSRFTOKENをヘッダに埋め込む
+          // ajax通信の前にリソースを更新するメソッドであればCSRFTOKENをヘッダに埋め込む
           $.ajaxSetup({
               beforeSend: function(xhr, settings) {
                   if (!csrfSafeMethod(settings.type) && !this.crossDomain) {
@@ -37,28 +38,32 @@
               }
           });
 
-          //　フォロー後、フォローボタンを非表示、フォロー中ボタンを表示
-          var afterSuccessFollow = function(unfollowButtonElement,target){
+          /* フォローのリクエストをajax通信でpostした後の処理
+          　 「フォローする」-> 「フォロー中」にボタンを変更
+          　  後にフォロー解除ができるように、relationIdを埋め込む */
+          var afterSuccessFollow = function($unfollowButtonElement,target){
             return function(data){
-              unfollowButtonElement.text('フォロー中')
-              unfollowButtonElement.removeClass('un-follow').addClass('already-follow')
-              unfollowButtonElement.removeClass('btn-outline-primary').addClass('bg-gradient-primary')
-              relation_id = data['id']
-              if(relation_id){
+              $unfollowButtonElement.text('フォロー中')
+              $unfollowButtonElement.removeClass('un-follow').addClass('already-follow')
+              $unfollowButtonElement.removeClass('btn-outline-primary').addClass('bg-gradient-primary')
+              relationId = data['id']
+              if(relationId){
                 $('#'+target).val(data['id']);
               }
             }
           };
-          //　フォロー後、フォローボタンを表示、フォロー中ボタンを非表示
-          var afterSuccessUnfollow = function(alreadyfollowButtonElement,target){
-              alreadyfollowButtonElement.text('フォローする')
-              alreadyfollowButtonElement.removeClass('already-follow').addClass('un-follow')
-              alreadyfollowButtonElement.removeClass('bg-gradient-primary').addClass('btn-outline-primary')
+          /* フォロー解除をdeleteメソッドでリクエストをした後の処理
+            「フォロー中」-> 「フォローする」にボタンを変更 */
+          var afterSuccessUnfollow = function($alreadyfollowButtonElement,target){
+              $alreadyfollowButtonElement.text('フォローする')
+              $alreadyfollowButtonElement.removeClass('already-follow').addClass('un-follow')
+              $alreadyfollowButtonElement.removeClass('bg-gradient-primary').addClass('btn-outline-primary')
           };
-          // 
+          /* 「フォローする」ボタンを押した後の処理
+              フォローのリクエストをajax通信でpostする処理 */ 
           $('body').on('click','.un-follow',function(){
-            unfollowButtonElement = $(this)
-            var target = unfollowButtonElement.next().attr('id');
+            $unfollowButtonElement = $(this)
+            var target = $unfollowButtonElement.next().attr('id');
             var data = new FormData();
             data.append('target',target);
             $.ajax({
@@ -66,18 +71,20 @@
               type:'POST',
               dataType:'json',
               data:data,
-              success:afterSuccessFollow(unfollowButtonElement,target),
+              success:afterSuccessFollow($unfollowButtonElement,target),
               processData:false,
               contentType:false,
             })
           });
+          /* 「フォロー」タンを押した後の処理
+              フォロー解除をdeleteメソッドでリクエストする */
           $('body').on('click','.already-follow',function(){
-            alreadyfollowButtonElement = $(this)
-            var target = alreadyfollowButtonElement.next().val();
+            var target = $alreadyfollowButtonElement.next().val();
+            $alreadyfollowButtonElement = $(this)
             $.ajax({
               url:'http://localhost/account/relation/'+target+'/',
               type:'DELETE',
-              success:afterSuccessUnfollow(alreadyfollowButtonElement),
+              success:afterSuccessUnfollow($alreadyfollowButtonElement),
               processData:false,
               contentType:false,
             })
